--- a/dataviz/src/app/app.component.css
+++ b/dataviz/src/app/app.component.css
@@ -1,4 +1,14 @@
 div{
     height: 100vh;
     width: 100%;
+    z-index: 0;
 }
+.controls {
+    z-index: 100;
+    bottom: 95vh;
+    width: 25vw;
+    left: 70vw;
+}
+.mat-slider-horizontal {
+    width: 25vw;
+  }
