--- a/dataviz/src/app/app.component.html
+++ b/dataviz/src/app/app.component.html
@@ -6,6 +6,10 @@
   <mat-card-content>
     <h4>Time</h4>
     <mat-slider thumbLabel tickInterval="1" min="0" max="24" (change)="filterHeatmap()" [(ngModel)]="time"></mat-slider>
+    <button mat-button color="primary" (click)="resetHeatmap()">Reset Heatmap</button>
+    <button mat-button color="primary" (click)="startDrawing()">Start Drawing</button>
+    <button mat-button color="primary" (click)="editDrawing()">Edit Drawing</button>
+    <button mat-button color="primary" (click)="stopDrawing()">Stop Drawing</button>
   </mat-card-content>
   <mat-card-actions>
     <button mat-button>Close</button>
