Added hex grid support

--- a/dataviz/src/app/app.component.html
+++ b/dataviz/src/app/app.component.html
@@ -1,6 +1,9 @@
 <div id="map">
 
 </div>
+<mat-card class="loading" *ngIf="loading">
+  <h1>Loading...</h1>
+</mat-card>
 <mat-card class="controls">
   <mat-card-title>Controls</mat-card-title>
   <mat-card-content>
