--- a/dataviz/src/app/app.component.css
+++ b/dataviz/src/app/app.component.css
@@ -1,14 +1,23 @@
-div{
+div {
     height: 100vh;
     width: 100%;
     z-index: 0;
 }
+
 .controls {
     z-index: 100;
     bottom: 95vh;
     width: 25vw;
     left: 70vw;
 }
+
+.loading {
+    z-index: 105;
+    bottom: 50vh;
+    width: 13vw;
+    left: 37vw;
+}
+
 .mat-slider-horizontal {
     width: 25vw;
-  }
+}
