--- a/dataviz/src/app/app.component.html
+++ b/dataviz/src/app/app.component.html
@@ -19,6 +19,7 @@
     <button mat-button color="primary" (click)="removeAllJourneys()">Remove All Journeys</button>
     <button mat-button color="primary" (click)="showHeatmap()">Show Heatmap</button>
     <button mat-button color="primary" (click)="hideHeatmap()">Hide Heatmap</button>
+    <button mat-button color="primary" (click)="hideHexmap()">Hide Hexmap</button>
     <button mat-button color="primary" (click)="resetHeatmap()">Reset Heatmap</button>
     <button mat-button color="primary" (click)="startDrawing()">Start Drawing</button>
     <button mat-button color="primary" (click)="editDrawing()">Edit Drawing</button>
