--- a/dataviz/src/app/app.component.html
+++ b/dataviz/src/app/app.component.html
@@ -15,6 +15,7 @@
     <!-- <mat-form-field class="example-full-width" [(ngModel)]="tickSize">
       <input matInput placeholder="Tick Interval" value="1">
     </mat-form-field> -->
+
     <button mat-button color="primary" (click)="showAllJourneys()">Show All Journeys</button>
     <button mat-button color="primary" (click)="removeAllJourneys()">Remove All Journeys</button>
     <button mat-button color="primary" (click)="showHeatmap()">Show Heatmap</button>
@@ -28,6 +29,7 @@
     <button mat-button color="primary" (click)="showAllHexPolygons()">Show Hex Graphs</button>
     <button mat-button color="primary" (click)="hideAllHexPolygons()">Hide Hex Graphs</button>
     <button mat-button color="primary" (click)="hoverEnabled = !hoverEnabled">Toggle Hover</button>
+    <button mat-button color="primary" (click)="removeAllPoints()">Remove Points</button>
   </mat-card-content>
   <mat-card-actions>
     <button mat-button>Close</button>
