--- a/dataviz/src/app/app.component.css
+++ b/dataviz/src/app/app.component.css
@@ -8,7 +8,9 @@ div {
     z-index: 100;
     bottom: 95vh;
     width: 25vw;
+    height: 70vh;
     left: 70vw;
+    overflow-y: auto;
 }
 
 .loading {
