--- a/dataviz/src/app/app.component.html
+++ b/dataviz/src/app/app.component.html
@@ -9,31 +9,28 @@
   <mat-card-content>
     <h4>Time</h4>
     <h4>Heatmap</h4>
-    <mat-slider thumbLabel [tickInterval]="tickSize" [step]="stepSize" min="0" max="23" (change)="filterHeatmap()" [(ngModel)]="time">
+    <mat-slider thumbLabel [tickInterval]="tickSize" [step]="stepSize" min="0" max="23" (change)="filterHeatmap()"
+      [(ngModel)]="time">
     </mat-slider>
     <h4>Hexmap</h4>
     <mat-slider thumbLabel [tickInterval]="tickSize" min="0" max="23" (change)="filterHexmap()" [(ngModel)]="timeHex">
     </mat-slider>
-    <!-- <mat-form-field class="example-full-width" [(ngModel)]="tickSize">
-      <input matInput placeholder="Tick Interval" value="1">
-    </mat-form-field> -->
-
+    <h4>Journeys</h4>
     <button mat-button color="primary" (click)="showAllJourneys()">Show All Journeys</button>
     <button mat-button color="primary" (click)="removeAllJourneys()">Remove All Journeys</button>
-    <button mat-button color="primary" (click)="showHeatmap()">Show Heatmap</button>
-    <button mat-button color="primary" (click)="showHexmap()">Show Hexmap</button>
-    <button mat-button color="primary" (click)="hideHeatmap()">Hide Heatmap</button>
-    <button mat-button color="primary" (click)="hideHexmap()">Hide Hexmap</button>
-    <button mat-button color="primary" (click)="resetHeatmap()">Reset Heatmap</button>
     <button mat-button color="primary" (click)="startDrawing()">Start Drawing</button>
     <button mat-button color="primary" (click)="editDrawing()">Edit Drawing</button>
     <button mat-button color="primary" (click)="stopDrawing()">Stop Drawing</button>
+    <h4>Heat Map Controls</h4>
+    <button mat-button color="primary" (click)="showHeatmap()">Show Heatmap</button>
+    <button mat-button color="primary" (click)="hideHexmap()">Hide Hexmap</button>
+    <h4>Hex Map Controls</h4>
+    <button mat-button color="primary" (click)="showHexmap()">Show Hexmap</button>
+    <button mat-button color="primary" (click)="hideHeatmap()">Hide Heatmap</button>
+    <button mat-button color="primary" (click)="resetHeatmap()">Reset Heatmap</button>
+    <h4>Hexagonal Graph Controls</h4>
     <button mat-button color="primary" (click)="showAllHexPolygons()">Show Hex Graphs</button>
     <button mat-button color="primary" (click)="hideAllHexPolygons()">Hide Hex Graphs</button>
     <button mat-button color="primary" (click)="hoverEnabled = !hoverEnabled">Toggle Hover</button>
-    <button mat-button color="primary" (click)="removeAllPoints()">Remove Points</button>
   </mat-card-content>
-  <mat-card-actions>
-    <button mat-button>Close</button>
-  </mat-card-actions>
 </mat-card>
